k8s/configs/41-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: syla
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: docker.io/qwert7750/syla:v4
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-storage
              mountPath: /app/media
          readinessProbe:
            httpGet:
              path: /           
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
