k8s/configs/30-postgres-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: syla
spec:
  clusterIP: None        
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
