k8s/configs/40-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: syla
spec:
  type: ClusterIP      
  selector:
    app: web
  ports:
    - port: 8000
      targetPort: 8000
