k8s/configs/50-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: syla
spec:
  ingressClassName: nginx       
  rules:
    - host: syla.k8s.lab          
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web        
                port:
                  number: 8000
